--- a/Banco GOI/src/main/webapp/templates/extrato.html
+++ b/Banco GOI/src/main/webapp/templates/extrato.html
@@ -12,6 +12,8 @@
   <!-- folha específica do extrato, depois da “global” -->
   <link rel="stylesheet" href="/static/css/home.css">
   <link rel="stylesheet" href="/static/css/extrato.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
 
@@ -77,10 +79,23 @@
       <h5>Avalie o nosso serviço</h5><hr>
     </div>
     <div class="faces">
-      <div class="face-item"><img src="/static/img/mau-rosa.png"><h6>Insatisfeito</h6></div>
-      <div class="face-item"><img src="/static/img/medio-rosa.png"><h6>Indiferente</h6></div>
-      <div class="face-item"><img src="/static/img/ok-rosa.png"><h6>Satisfeito</h6></div>
-      <div class="face-item"><img src="/static/img/feliz-rosa.png"><h6>Muito satisfeito</h6></div>
+      <div class="face-item" data-feedback="1">
+        <img src="/static/img/mau-rosa.png" alt="Insatisfeito">
+        <h6>Insatisfeito</h6>
+      </div>
+      <div class="face-item" data-feedback="2">
+        <img src="/static/img/medio-rosa.png" alt="Indiferente">
+        <h6>Indiferente</h6>
+      </div>
+      <div class="face-item" data-feedback="3">
+        <img src="/static/img/ok-rosa.png" alt="Satisfeito">
+        <h6>Satisfeito</h6>
+      </div>
+      <div class="face-item" data-feedback="4">
+        <img src="/static/img/feliz-rosa.png" alt="Muito satisfeito">
+        <h6>Muito satisfeito</h6>
+      </div>
+
     </div>
   </div>
   <div class="img-24h"><img src="/static/img/24h.png" alt="24 h"></div>
