fix: popup pagamentos

--- a/Banco GOI/src/main/webapp/templates/home.html
+++ b/Banco GOI/src/main/webapp/templates/home.html
@@ -198,6 +198,25 @@
     </div>
 </div>
 
+<div id="popup-pagamentos" class="popup hidden">
+    <div class="popup-content">
+        <button class="popup-close" data-target="popup-pagamentos">X</button>
+        <div class="popup-image-container">
+            <img id="pagamentos-image" src="/static/img/pgto1.png" alt="Solicitar Produtos" style="width:100%; border-radius:8px;">
+            <div class="image-selector">
+                <span class="selector-dot active" data-src="/static/img/pgto1.png"></span>
+                <span class="selector-dot" data-src="/static/img/pgto2.png"></span>
+                <span class="selector-dot" data-src="/static/img/pgto3.png"></span>
+                <span class="selector-dot" data-src="/static/img/pgto4.png"></span>
+                <span class="selector-dot" data-src="/static/img/pgto5.png"></span>
+                <span class="selector-dot" data-src="/static/img/pgto6.png"></span>
+            </div>
+        </div>
+        <h3>Área de Pagamentos</h3>
+        <p>Pague suas contas com saldo em conta ou com limite do cartão.<br><strong>Em desenvolvimento, disponível a partir de 26/05/2026.</strong></p>
+    </div>
+</div>
+
 <script src="/static/js/home.js"></script>
 
 <!-- BOTÃO/BOLINHA -->
