--- a/Banco GOI/src/main/webapp/templates/extrato.html
+++ b/Banco GOI/src/main/webapp/templates/extrato.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
-  <!-- folha específica do extrato, depois da “global” -->
+  <!-- folha específica do extrato, depois da "global" -->
   <link rel="stylesheet" href="/static/css/home.css">
   <link rel="stylesheet" href="/static/css/extrato.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
