--- a/Banco GOI/src/main/webapp/templates/transferencia.html
+++ b/Banco GOI/src/main/webapp/templates/transferencia.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/transferencia.css">
-    <title>GOI Bankline – Transferências</title>
+    <link rel="stylesheet" href="/static/css/transferencia.css">
+    <title>GOI Bankline - Transferência</title>
+    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
